--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "install:all": "npm install --prefix client && npm install --prefix server",
   "build:client": "npm run build --prefix client",
   "start:server": "npm start --prefix server",
-  "build": "npm run build:client",
+  "build": "npm install --prefix client && npm install --prefix server",
   "start": "npm run start:server"
 },
   "repository": {
