--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
   "install:all": "npm install --prefix client && npm install --prefix server",
   "build:client": "npm run build --prefix client",
-  "start:server": "npm start --prefix server",
-  "build": "npm install --prefix client && npm install --prefix server",
-  "start": "npm run start:server"
+  "build": "npm install --prefix server",
+  "start": "npm run start:server",
+  "start:server": "npm start --prefix server"
 },
   "repository": {
     "type": "git",
