--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "install:all": "npm install --prefix client && npm install --prefix server",
+  "install": "npm install --prefix client && npm install --prefix server",
   "build:client": "npm run build --prefix client",
   "build": "npm install --prefix server",
   "start": "npm run start:server",
