--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "concurrently": "^9.1.0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0"
   }
